# faststream-deadline-propagation

./: README.md  pyproject.toml
faststream_deadline_propagation/: __init__.py  countdown.py  defaults.py
faststream_deadline_propagation/exceptions/: __init__.py  deadline_occurred.py
faststream_deadline_propagation/middlewares/: __init__.py  process.py  publish.py
